--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     font-family: "Roboto", sans-serif;
 }
 
+
 .card {
     height: 420px;
     width: 220px;
@@ -104,7 +105,7 @@
     h1 {
         text-align: center;
     }
-
+   
     div {
         width: 400px;
         height: 500px;
@@ -112,8 +113,16 @@
         border-radius: 20px;
         display: flex;
         flex-direction: column;
+        position: relative;
         padding-inline: 20px;
-
+        .close {
+            position: absolute;
+            top: 0px;
+            height: 20px;
+            width: 20px;
+            
+            right: 20px;
+        }
         input {
             height: 35px;
             border-radius: 20px;
